logs/django-shapes.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_shapes-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/shapes'...
Compiling './lib/python3.5/site-packages/shapes/forms.py'...
***   File "./lib/python3.5/site-packages/shapes/forms.py", line 38
    print downloaded_file
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/shapes/templates'...
Listing './lib/python3.5/site-packages/shapes/views'...
Compiling './lib/python3.5/site-packages/shapes/views/export copy.py'...
***   File "./lib/python3.5/site-packages/shapes/views/export copy.py", line 119
    except UnicodeEncodeError, E:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/shapes/views/export.py'...
***   File "./lib/python3.5/site-packages/shapes/views/export.py", line 177
    except UnicodeEncodeError, E:
                             ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
